# qt_qml_shenanigans

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
data/: tour.gpx
scripts/: deploy_win.bat
source/: CMakeLists.txt
source/custom_objects_app/: CMakeLists.txt  element_backend_qt.cpp  element_backend_qt.h  element_qt.cpp  element_qt.h  main.cpp
source/custom_objects_app/res/qml/: main.qml
source/multi_screen_app/: CMakeLists.txt  main.cpp  main.qrc
source/multi_screen_app/res/qml/: main.qml
source/osm_map_app/: CMakeLists.txt  app_backend_qt.h  main.cpp  main.qrc  place_qt.cpp  place_qt.h  places_qt.cpp  places_qt.h  point_of_interest_qt.h  point_of_interest_qt_model.h
source/osm_map_app/res/qml/: main.qml
